wdl-analysis/tests/validation/duplicate-placeholder-options/source.errors
warning[UnusedDeclaration]: unused declaration `a`
  ┌─ tests/validation/duplicate-placeholder-options/source.wdl:6:10
  │
6 │   String a = "~{default="foo" foo}"
  │          ^

error: unknown name `foo`
  ┌─ tests/validation/duplicate-placeholder-options/source.wdl:6:31
  │
6 │   String a = "~{default="foo" foo}"
  │                               ^^^

warning[UnusedDeclaration]: unused declaration `b`
  ┌─ tests/validation/duplicate-placeholder-options/source.wdl:7:10
  │
7 │   String b = "${default="foo" sep="," foo}"
  │          ^

error: unknown name `foo`
  ┌─ tests/validation/duplicate-placeholder-options/source.wdl:7:39
  │
7 │   String b = "${default="foo" sep="," foo}"
  │                                       ^^^

error: conflicting declaration name `b`
  ┌─ tests/validation/duplicate-placeholder-options/source.wdl:8:10
  │
7 │   String b = "${default="foo" sep="," foo}"
  │          - the declaration with the conflicting name is here
8 │   String b = "${default="foo" sep="," true="a" false="b" foo}"
  │          ^ this declaration conflicts with a previously used name

error: unknown name `foo`
   ┌─ tests/validation/duplicate-placeholder-options/source.wdl:11:21
   │
11 │     ~{default="foo" foo}"
   │                     ^^^

error: unknown name `foo`
   ┌─ tests/validation/duplicate-placeholder-options/source.wdl:12:29
   │
12 │     ~{default="foo" sep="," foo}
   │                             ^^^

error: unknown name `foo`
   ┌─ tests/validation/duplicate-placeholder-options/source.wdl:13:48
   │
13 │     ~{default="foo" sep="," true="a" false="b" foo}
   │                                                ^^^

